--- a/css/style.css
+++ b/css/style.css
@@ -1,160 +1,94 @@
+@keyframes deletion {
+  0% {
+    transform: scale(1); }
+  100% {
+    transform: scale(1.05); } }
+
 *,
-::after,
-::before{
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
-html{
-  font-size: 62.5%;
-}
+html {
+  font-size: 62.5%; }
 
-body{
+body {
   box-sizing: border-box;
-  font-family: "Open Sans", Arial, sans-serif;
-}
+  font-family: "Open Sans", Arial, sans-serif; }
 
-.header{
+.header {
   width: 100%;
   height: 100vh;
-  position: relative;
-}
-
-.header-bcg{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.4);
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-}
-.header-img{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -2;
-  animation: deletion 3s linear forwards;
-}
-
-@keyframes deletion {
-  0%{
-    transform: scale(1);
-  }
-  100%{
-    transform: scale(1.05);
-  }
-}
-
-.logo-img {
-  display: block;
-  height: 5.5rem;
-}
-
-.header-top-block{
-  position: relative;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.7);
-}
-
-.header-top-block-container{
-  width: 1140px;
-  padding: 2rem 0;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-nav-list{
-  list-style: none;
-  display: flex;
-}
-
-.header-nav-item:not(:last-child){
-  margin-right: 1.5rem;
-}
-
-.header-nav-link:link,
-.header-nav-link:visited{
-  text-decoration: none;
-  color: rgb(227, 30, 36);
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-.header-nav-link:hover{
-  border-bottom: 1px dashed #fff;
-  transition: all 0.5s;
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.header-top-block-contact{
-  display: flex;
-  align-items: center;
-}
-
-.header-top-block-phone{
-  margin-right: 1.5rem;
-}
-
-.header-top-block-mail{
-  margin-right: 1.5rem;
-}
-
-.fa{
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 1.6rem;
-  margin-right: 0.5rem;
-}
-
-.fa-search:hover{
-  transition: all 0.5s;
-  color: rgba(255, 255, 255, 1);
-  cursor: pointer;
-}
-
-.link{
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-.link:hover{
-  border-bottom: 1px dashed #fff;
-  transition: all 0.5s;
-  color: rgba(255, 255, 255, 1);
-}
-
-.link:hover .fa{
-  transition: all 0.5s;
-  color: rgba(255, 255, 255, 1);
-}
-
-.information{
-  position: relative;
-}
-
-.information-container{
-  width: 1140px;
-  height: 80vh;
-  padding: 10rem 0;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.information-img{
-  height: 30rem;
-}
-
-
-
-
-
-
+  position: relative; }
+  .header__bcg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0; }
+  .header__img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    animation: deletion 3s linear forwards; }
+  .header__top {
+    position: relative;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.7); }
+  .header__container {
+    width: 1140px;
+    padding: 2rem 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__logo {
+    display: block;
+    height: 5.5rem; }
+  .header__nav-list {
+    list-style: none;
+    display: flex; }
+  .header__nav-item:not(:last-child) {
+    margin-right: 1.5rem; }
+  .header__nav-link:link, .header__nav-link:visited {
+    display: block;
+    text-decoration: none;
+    color: #e31e24;
+    font-family: "Play", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    transition: all 0.3s; }
+    .header__nav-link:link:hover, .header__nav-link:visited:hover {
+      color: white;
+      transform: translateY(-0.5rem); }
+  .header__contact {
+    display: flex; }
+  .header__contact-link:link, .header__contact-link:visited {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.6);
+    font-family: "Play", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    transition: 0.3s; }
+    .header__contact-link:link:not(:last-child), .header__contact-link:visited:not(:last-child) {
+      margin-right: 1.5rem; }
+    .header__contact-link:link:hover, .header__contact-link:visited:hover {
+      color: white;
+      transform: translateY(-0.5rem); }
+  .header__contact-icon {
+    height: 2.25rem;
+    width: 2.25rem;
+    fill: rgba(0, 0, 0, 0.6);
+    margin-right: 0.5rem; }
+  .header__contact-link:hover .header__contact-icon {
+    fill: white;
+    transition: 0.2s; }
