--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,4 +2,7 @@
 $color-red: rgb(227, 30, 36);
 $color-bcg: rgba(255, 255, 255, 0.7);
 $color-hover-link: rgba(255, 255, 255, 1);
+$color-contact-link: rgba(0, 0, 0, 0.6);
+
+//fonts
 $font-primary: 'Play', sans-serif;
