--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,24 @@
   100% {
     transform: scale(1.05); } }
 
+@keyframes moveInLeft {
+  0% {
+    transform: translateX(-100%); }
+  100% {
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    transform: translateX(100%); }
+  100% {
+    transform: translateX(0); } }
+
+@keyframes outInOpacity {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 *,
 *::after,
 *::before {
@@ -18,16 +36,51 @@ body {
   box-sizing: border-box;
   font-family: "Play", sans-serif; }
 
+.heading-primary {
+  font-size: 5rem;
+  color: #fff;
+  letter-spacing: 1rem;
+  text-shadow: 0.2rem 0.2rem 0.4rem #000;
+  margin-bottom: 1.5rem;
+  text-align: center; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  color: rgba(239, 5, 12, 0.75);
+  letter-spacing: 0.5rem;
+  text-shadow: 0.2rem 0.2rem 0.4rem #000;
+  margin-bottom: 4rem;
+  text-align: center; }
+
+.btn {
+  display: inline-block;
+  padding: 1.5rem 2rem;
+  background-color: rgba(192, 192, 192, 0.9);
+  margin: 0 auto;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000;
+  font-weight: 900;
+  transition: all 0.2s; }
+  .btn:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem #000; }
+  .btn:active {
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem #000; }
+
 .header {
   width: 100%;
   height: 100vh;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .header__bcg {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
-    overflow: hidden;
     top: 0;
     left: 0; }
   .header__img {
@@ -38,20 +91,56 @@ body {
     left: 0;
     z-index: -2;
     animation: deletion 3s linear forwards; }
-  .header__top {
-    position: relative;
+  .header__information {
     width: 100%;
-    background: rgba(255, 255, 255, 0.7); }
+    margin: 0 auto;
+    display: flex;
+    position: relative; }
+  .header__left {
+    position: absolute;
+    left: 0;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    transform: translateX(-100%);
+    background-color: rgba(255, 255, 255, 0.3);
+    animation: moveInLeft 0.8s linear forwards; }
+  .header__presentation-img {
+    opacity: 0;
+    animation: outInOpacity 0.5s 1.2s linear forwards; }
+  .header__right {
+    position: absolute;
+    right: 0;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    background-color: rgba(36, 36, 36, 0.3);
+    animation: moveInRight 0.8s linear forwards; }
+  .header__heading-box {
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    animation: outInOpacity 0.5s 1.2s linear forwards; }
+  .header__top {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 2; }
   .header__container {
     width: 80%;
-    padding: 2rem 0;
+    padding: 1rem 0;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center; }
   .header__logo {
     display: block;
-    height: 5.5rem; }
+    height: 5rem; }
   .header__nav-list {
     list-style: none;
     display: flex; }
@@ -60,13 +149,13 @@ body {
   .header__nav-link:link, .header__nav-link:visited {
     display: block;
     text-decoration: none;
-    color: #e31e24;
+    color: #fff;
     font-family: "Play", sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
     transition: all 0.3s; }
     .header__nav-link:link:hover, .header__nav-link:visited:hover {
-      color: white; }
+      color: #e31e24; }
   .header__nav-link--js {
     display: flex;
     margin-right: 1.5rem;
@@ -90,7 +179,7 @@ body {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.7);
     font-family: "Play", sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
@@ -98,13 +187,13 @@ body {
     .header__contact-link:link:not(:last-child), .header__contact-link:visited:not(:last-child) {
       margin-right: 1.5rem; }
     .header__contact-link:link:hover, .header__contact-link:visited:hover {
-      color: white; }
+      color: #e31e24; }
   .header__contact-icon {
     height: 2.25rem;
     width: 2.25rem;
-    fill: rgba(0, 0, 0, 0.6); }
+    fill: rgba(255, 255, 255, 0.7); }
     .header__contact-icon:not(:last-child) {
       margin-right: 0.5rem; }
   .header__contact-link:hover .header__contact-icon {
-    fill: white;
+    fill: #e31e24;
     transition: 0.2s; }
