--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,15 @@
 //color
+$white: #fff;  
+$black: #000;
 $color-red: rgb(227, 30, 36);
-$color-bcg: rgba(255, 255, 255, 0.7);
-$color-hover-link: rgba(255, 255, 255, 1);
-$color-contact-link: rgba(0, 0, 0, 0.6);
+$color-red-2: rgba(239,5,12,0.75);
+$color-bcg: rgba(0,0,0,0.4);
+$color-bcg-2: rgba(255, 255, 255, 0.3);
+$color-bcg-3: rgba(36, 36, 36, 0.3);
 
-//fonts
-$font-primary: 'Play', sans-serif;
+$color-hover-link: rgba(255, 255, 255, 1); 
+$color-contact-link: rgba(255, 255, 255, 0.7);
+$btn-color: rgba(192,192,192,0.9); 
+
+//fonts 
+$font-primary: 'Play', sans-serif;    
