--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -6,3 +6,27 @@
     transform: scale(1.05);
   }
 }
+@keyframes moveInLeft{
+  0%{
+    transform: translateX(-100%); 
+  }
+  100%{
+    transform: translateX(0);    
+  }
+}
+@keyframes moveInRight{
+  0%{
+    transform: translateX(100%); 
+  }
+  100%{
+    transform: translateX(0);    
+  }
+}
+@keyframes outInOpacity{
+  0%{
+    opacity: 0;
+  }  
+  100%{
+    opacity: 1;
+  }
+}
