--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $black: #000;
 $color-red: rgb(227, 30, 36);
 $color-red-2: rgba(239,5,12,0.75);
 $color-bcg: rgba(0,0,0,0.4);
-$color-bcg-2: rgba(255, 255, 255, 0.3);
+$color-bcg-2: rgba(255, 255, 255, 0.45);
 $color-bcg-3: rgba(36, 36, 36, 0.3);
 
 $color-hover-link: rgba(255, 255, 255, 1); 
@@ -12,4 +12,5 @@ $color-contact-link: rgba(255, 255, 255, 0.7);
 $btn-color: rgba(192,192,192,0.9); 
 
 //fonts 
-$font-primary: 'Play', sans-serif;    
+$font-primary: 'Play', sans-serif;
+$font-secondary: 'Oswald', sans-serif;   
