--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@ body {
   text-decoration: none;
   color: #000;
   font-weight: 900;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  backface-visibility: hidden; }
   .btn:hover {
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem #000; }
@@ -105,7 +106,7 @@ body {
     justify-content: center;
     height: 100vh;
     transform: translateX(-100%);
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.45);
     animation: moveInLeft 0.8s linear forwards; }
   .header__presentation-img {
     opacity: 0;
@@ -145,14 +146,14 @@ body {
     list-style: none;
     display: flex; }
   .header__nav-item:not(:last-child) {
-    margin-right: 1.5rem; }
+    margin-right: 2rem; }
   .header__nav-link:link, .header__nav-link:visited {
     display: block;
     text-decoration: none;
     color: #fff;
-    font-family: "Play", sans-serif;
+    font-family: "Oswald", sans-serif;
     font-size: 1.8rem;
-    font-weight: 400;
+    font-weight: 300;
     transition: all 0.3s; }
     .header__nav-link:link:hover, .header__nav-link:visited:hover {
       color: #e31e24; }
@@ -163,8 +164,8 @@ body {
     .header__nav-link--js:hover {
       color: white; }
   .header__icon-link {
-    top: -4px;
-    right: -20px;
+    top: -3px;
+    right: -23px;
     position: absolute;
     height: 2.25rem;
     width: 2.25rem;
@@ -180,9 +181,9 @@ body {
     align-items: center;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.7);
-    font-family: "Play", sans-serif;
+    font-family: "Oswald", sans-serif;
     font-size: 1.8rem;
-    font-weight: 400;
+    font-weight: 300;
     transition: 0.3s; }
     .header__contact-link:link:not(:last-child), .header__contact-link:visited:not(:last-child) {
       margin-right: 1.5rem; }
