--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,6 +10,7 @@
   color: $black;  
   font-weight: 900; 
   transition: all 0.2s; 
+  backface-visibility: hidden;
   &:hover{
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem $black;    
