--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,18 @@ body {
   text-align: center; }
 
 .heading-secondary {
-  font-size: 3.5rem;
+  font-size: 4rem;
   color: rgba(239, 5, 12, 0.75);
   letter-spacing: 0.5rem;
   text-shadow: 0.2rem 0.2rem 0.4rem #000;
-  margin-bottom: 4rem;
+  margin-bottom: 1.5rem;
+  text-align: center; }
+
+.heading-tertiary {
+  font-size: 2rem;
+  color: #fff;
+  letter-spacing: 0.2rem;
+  margin-bottom: 3rem;
   text-align: center; }
 
 .btn {
@@ -72,11 +79,19 @@ body {
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem #000; }
 
+.slide {
+  width: 100%;
+  height: 100vh;
+  position: absolute; }
+
 .header {
   width: 100%;
   height: 100vh;
   position: relative;
   overflow: hidden; }
+  .header__presentation {
+    width: 100%;
+    height: 100vh; }
   .header__bcg {
     width: 100%;
     height: 100%;
@@ -110,7 +125,8 @@ body {
     animation: moveInLeft 0.8s linear forwards; }
   .header__presentation-img {
     opacity: 0;
-    animation: outInOpacity 0.5s 1.2s linear forwards; }
+    animation: outInOpacity 0.5s 1.2s linear forwards;
+    max-height: 70%; }
   .header__right {
     position: absolute;
     right: 0;
@@ -134,7 +150,7 @@ body {
     z-index: 2; }
   .header__container {
     width: 80%;
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
