--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,10 @@
   height: 100vh;
   position: relative; 
   overflow: hidden;
+  &__presentation{
+    width: 100%; 
+    height: 100vh; 
+  }
   &__bcg{
     width: 100%;
     height: 100%;
@@ -14,22 +18,21 @@
   &__img{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: absolute;  
     top: 0;
     left: 0;
     z-index: -2;
-    animation: deletion 3s linear forwards;    
-  }  
+    animation: deletion 3s linear forwards;      
+  }
   &__information{
     width: 100%;
     margin: 0 auto;
     display: flex;
     position: relative;
-    
   }
   &__left{    
     position: absolute; 
-    left: 0;
+    left: 0; 
     width: 50%;     
     display: flex; 
     align-items: center;
@@ -41,7 +44,8 @@
   } 
   &__presentation-img{
     opacity: 0;
-    animation: outInOpacity 0.5s 1.2s linear forwards;     
+    animation: outInOpacity 0.5s 1.2s linear forwards; 
+    max-height: 70%;     
   }
   &__right{
     position: absolute; 
@@ -69,11 +73,11 @@
   }
   &__container{ 
     width: 80%;
-    padding: 1rem 0;   
+    padding: 1.5rem 0;   
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;  
   }
   &__logo{
     display: block;
