--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes deletion {
+@keyframes approximation {
   0%{
     transform: scale(1);
   }
@@ -8,7 +8,7 @@
 }
 @keyframes moveInLeft{
   0%{
-    transform: translateX(-100%); 
+    transform: translateX(-100%);  
   }
   100%{
     transform: translateX(0);    
