add section presentation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,8 @@
 @import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";  
+@import "layout/presentation";  
+
 
 @import "pages/home";    
 
